fixing edge cases around annotations